
v0.4.3:
 - Optimization: rename stat config option emit_duration to emit_interval

v0.4.2:
 - Feature: allow to read symlink files on local store dir
 - Feature: allow to retry register on startup
 - Feature: add cli options to allow quit on panic
 - Feature: allow to enable tls usage in server
 - Feature: add more fields to request log

v0.4.1:
 - Feature: allow to set openssl async job size in worker config
 - Feature: allow to set worker CPU affinity from environment variables

v0.4.0:
 - Feature: add worker support, and also allow to use multiple threads in main runtime
 - Compatibility: drop AWS-LC support to reduce outdated dependencies

v0.3.5:
 - Feature: emit tokio runtime metrics
 - Feature: allow to send event logs to stdout
 - Optimization: more robust daemon hot restart

v0.3.4:
 - Feature: add more error types to request log
 - Feature: emit request duration stats
 - Feature: disable openssl-async-job by default
 - BUG FIX: fix logger io stats

v0.3.3:
 - Feature: allow to check key existence via g3keymess-ctl
 - BUG FIX: fix auto load of newly added keys in the local store dir

v0.3.2:
 - BUG FIX: fix sign action
 - BUG FIX: add missing request tags for gauge metrics
 - Optimization: ignore early connection close error
 - Feature: various improvements to journal logging
     - add SYSLOG_IDENTIFIER field
     - improved efficiency
     - io stats added
 - Feature: drop out of date dependencies by using forks and patches

v0.3.1:
 - Feature: default to guess main config file when run as systemd service
 - BUG FIX: ignore failure of ExecStop to ensure restart on success

v0.3.0:
 - Feature: allow to register service before running
 - Feature: always restart after service success quit
 - Feature: add the following global rpc methods:
     - add_metrics_tag to add metrics tag to all metrics
     - list_keys to list SKI of all stored keys

v0.2.0:
 - Initial release