@@ -1,6 +1,7 @@
 
 v0.3.9:
- - Optimization: rename stat config option emit_duration to emit_interval
+ - Deprecated: the following config options are deprecated:
+     - emit_duration in statsd config, use emit_interval instead
 
 v0.3.8:
  - BUG FIX: fix deadlock when reload port servers
